<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">


  <!-- Project parent -->
  <parent>
    <groupId>fr.liglab.adele.icasa</groupId>
    <artifactId>parent</artifactId>
    <version>1.2.6-SNAPSHOT</version>
    <relativePath>../../../../parent</relativePath>
  </parent>

  <modelVersion>4.0.0</modelVersion>
  <artifactId>application.manager.test</artifactId>
  <name>Application Manager Test</name>


  <properties>
    <exam.version>3.0.0</exam.version>
    <url.version>1.5.2</url.version>
    <distrib.groupId>${project.groupId}</distrib.groupId>
    <distrib.artifactId>icasa.platform.distribution</distrib.artifactId>
    <distrib.version>${project.version}</distrib.version>
  </properties>


  <dependencies>

    <dependency>
      <groupId>de.akquinet.gomobile</groupId>
      <artifactId>deployment-admin-impl</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>fr.liglab.adele.icasa</groupId>
      <artifactId>application.api</artifactId>
      <version>${project.version}</version>
      <exclusions>
        <exclusion>
            <groupId>org.osgi</groupId>
            <artifactId>org.osgi.core</artifactId>
        </exclusion>
      </exclusions>
    </dependency>


    <!-- Deployment packages to test -->
    <dependency>
      <groupId>fr.liglab.adele.icasa</groupId>
      <artifactId>follow-me-test-app-dp-1</artifactId>
      <version>${project.version}</version>
      <type>dp</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>fr.liglab.adele.icasa</groupId>
      <artifactId>gas-alarm-test-app-dp-1</artifactId>
      <version>${project.version}</version>
      <type>dp</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>fr.liglab.adele.icasa</groupId>
      <artifactId>gas-alarm-test-app-dp-2</artifactId>
      <version>${project.version}</version>
      <type>dp</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>fr.liglab.adele.icasa</groupId>
      <artifactId>control-test-app-dp-1</artifactId>
      <version>${project.version}</version>
      <type>dp</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>fr.liglab.adele.icasa</groupId>
      <artifactId>control-test-app-dp-2</artifactId>
      <version>${project.version}</version>
      <type>dp</type>
      <scope>test</scope>
    </dependency>
      <dependency>
          <groupId>org.ow2.chameleon.json</groupId>
          <artifactId>json-service-json.org</artifactId>
      </dependency>

  <!-- Distribution to test -->
  <dependency>
     <groupId>${distrib.groupId}</groupId>
     <artifactId>${distrib.artifactId}</artifactId>
     <version>${distrib.version}</version>
     <type>osgi-distribution</type>
     <scope>test</scope>
  </dependency>
  
  <dependency>
     <groupId>org.slf4j</groupId>
     <artifactId>slf4j-api</artifactId>
     <scope>test</scope>
  </dependency>
  
  <dependency>
     <groupId>org.mockito</groupId>
     <artifactId>mockito-all</artifactId>
     <version>1.9.5</version>
  </dependency>
  <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
     <type>jar</type>
     <scope>test</scope>
  </dependency>
  
  <dependency>
     <groupId>fr.liglab.adele.common</groupId>
     <artifactId>chameleon-tests</artifactId>
     <version>${DistributionTestVersion}</version>
     <scope>test</scope>
  </dependency>
  <dependency>
     <groupId>org.ow2.chameleon.testing</groupId>
     <artifactId>osgi-helpers</artifactId>
     <version>0.6.2-SNAPSHOT</version>
     <exclusions>
        <exclusion>
           <groupId>org.apache.felix</groupId>
           <artifactId>org.apache.felix.framework</artifactId>
        </exclusion>
        <exclusion>
           <groupId>org.ow2.chameleon</groupId>
           <artifactId>chameleon-core</artifactId>
        </exclusion>
        <exclusion>
           <groupId>org.osgi</groupId>
           <artifactId>org.osgi.core</artifactId>
        </exclusion>
        <exclusion>
           <groupId>ch.qos.logback</groupId>
           <artifactId>logback-core</artifactId>
        </exclusion>
        <exclusion>
           <groupId>ch.qos.logback</groupId>
           <artifactId>logback-classic</artifactId>
        </exclusion>
        <exclusion>
           <groupId>org.ops4j.pax.tinybundles</groupId>
           <artifactId>tinybundles</artifactId>
        </exclusion>
        <!--
        <exclusion>
           <groupId>biz.aQute</groupId>
           <artifactId>bndlib</artifactId>
        </exclusion>
        -->
     </exclusions>
  </dependency>   
  <dependency>
     <groupId>org.ops4j.pax.url</groupId>
     <artifactId>pax-url-mvn</artifactId>
     <version>1.3.6</version>
  </dependency>


    <dependency>
      <groupId>org.osgi</groupId>
      <artifactId>org.osgi.compendium</artifactId>
      <scope>test</scope>
    </dependency>



  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
          <systemPropertyVariables>
            <ipojo.processing.synchronous>true</ipojo.processing.synchronous>
            <org.osgi.framework.bootdelegation>sun.reflect</org.osgi.framework.bootdelegation>
            <felix.bootdelegation.implicit>false</felix.bootdelegation.implicit>
            <applications.test.version>${project.version}</applications.test.version>
          </systemPropertyVariables>
        </configuration>
      </plugin>
      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <executions>
            <execution>
               <id>unpack-distrib</id>
               <phase>validate</phase>
               <goals>
                  <goal>unpack-dependencies</goal>
               </goals>
               <configuration>
                  <includeGroupIds>${distrib.groupId}</includeGroupIds>
                  <includeArtifactIds>${distrib.artifactId}</includeArtifactIds>
                  <outputDirectory>${project.build.directory}/distribution</outputDirectory>
               </configuration>
            </execution>
            <execution>
               <id>copy-deps</id>
               <phase>validate</phase>
               <goals>
                  <goal>copy</goal>
               </goals>
               <configuration>
                  <artifactItems>
                     <artifactItem>
                        <groupId>org.ow2.chameleon.testing</groupId>
                        <artifactId>osgi-helpers</artifactId>
                        <outputDirectory>${project.build.directory}/distribution/${distrib.artifactId}/runtime</outputDirectory>
                     </artifactItem>
                     <artifactItem>
                        <groupId>org.mockito</groupId>
                        <artifactId>mockito-all</artifactId>
                        <outputDirectory>${project.build.directory}/distribution/${distrib.artifactId}/runtime</outputDirectory>
                     </artifactItem>
                      <artifactItem>
                          <groupId>org.ops4j.pax.url</groupId>
                          <artifactId>pax-url-mvn</artifactId>
                          <outputDirectory>${project.build.directory}/distribution/${distrib.artifactId}/core</outputDirectory>
                      </artifactItem>
                  </artifactItems>
               </configuration>
            </execution>
         </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.5</source>
          <target>1.5</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.ops4j.pax.exam</groupId>
        <artifactId>maven-paxexam-plugin</artifactId>
        <executions>
          <execution>
            <id>generate-config</id>
            <goals>
              <goal>generate-depends-file</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>